Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \usepackage{fontawesome}
 
 \usepackage{styles/phdbibliobyphd}
-\addbibresource{main.bib}
+%\addbibresource{main.bib}
 \addbibresource{zotero.bib}
 
 \graphicspath{{imgs/}{./}}
