--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -21,8 +21,9 @@ This thesis makes the following contributions:
 \begin{enumerate}
 	\item The basics of deep learning and neurocomputing are described. Together with the related work, this provides a survey of the most important research dealing with alternative learning algorithms.
 	\item The ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} is discussed and put into the context of the theory of self-organising projection fibres \sidecite{wiskott_face_1997, wolfrum_recurrent_2008}.
-	\item The probabilistic neuron is introduced, a neuron firing a binary spike based on a learned probability distribution.
-	\item A modernised version of the self-organising projection fibre framework is proposed, particularly focusing on sub-networks' emergence.
+    \item Many neuroscientific concepts that are highly relevant for visual object recognition are identified and summarised, and a vocabular compatible with the current deep learning framework is introduced.
+	\item The Bernoulli neuron is introduced, a neuron firing a binary spike based on a learned probability distribution.
+	\item A modernised version of the self-organising projection fibre framework is proposed, particularly focusing on building net fragments in a biological plausible way.
     \item The feasibility of the proposed framework is demonstrated with experiments.
     \item Directions for future research are given to develop the simplified framework into a complete vision framework.
 \end{enumerate}
@@ -31,7 +32,8 @@ This thesis makes the following contributions:
 \section{Organisation of Thesis}\seclbl{org_thesis}
 The remainder of the thesis is organised as follows: In \chref{fundamentals}, the fundamentals of deep learning and neurocomputing are explained in detail.
 Experts may skip this chapter; especially the second section on neurocomputing can be omitted, as it is not fundamental for understanding this thesis but only intended for interested readers or those who want to get a better overview of the field or have inspiration for future work.
-\chref{rel_work} introduces the related work. Next, \chref{probabilistic_framework} introduces the concept of the probabilistic neuron and proposes a novel vision learning framework, thereby putting it into context of existing work, the theory of natural intelligence, and findings from neuroscience.
+\chref{rel_work} introduces the related work. Next, \chref{probabilistic_framework} Identifies the most promising biological concepts for visual object recognition and introduces these principle with a simple vocabular that is compatible with the deep learning framework\sidenote{This is considered an important scientific contribution, which is why this section has not been included in the chapter about related work.}.
+Furthermore, it introduces the concept of the Bernoulli neuron and proposes a novel vision learning framework, thereby putting it into context of existing work, the theory of natural intelligence, and findings from neuroscience.
 In \chref{experiments}, conducted experiments with the novel framework are described and in \chref{results} the obtained results.
 Finally, \chref{future_work} concludes the thesis by discussing advantages and disadvantages of the proposed learning framework and suggests potential directions for future research.
 
