--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -1,11 +1,30 @@
 \small
+I want to start this preface by providing readers an overview of the origins of this master's thesis.
+This thesis should be understood as a first step towards a larger undertaking, namely as preparation for a dissertation.
+Therefore, this thesis should not be considered self-contained work, but rather as a (hopefully exciting) conceptual foundation,  that will be expanded and re-fined in the upcoming years.
+Many aspects of the proposed framework are still unclear or not yet proven by experiments.
+I kindly ask you, as reader, for your understanding and hope that you can recognise the value of the proposed concepts and that they will excite you as well.
+
 As soon as I have handed in this thesis and it has been assessed with a sufficient grade, I may use the title ``Master of Science''.
 Thus, I should ``master'' science or at least be able to work scientifically.
 Science can be defined as the systematic analysis of the real or virtual world through observations and experiments and the further development of existing technology.
 While this definition sounds straightforward, working successfully in science requires a lot of experience and commitment.
 I have been lucky enough to learn more about science and apply my knowledge in research projects at the Centre for Artificial Intelligence (CAI) of the Zurich University of Applied Sciences (ZHAW) since the beginning of my master's studies.
-Thus, I have learned to work scientifically on a daily basis, which is very beneficial for my future.
-I am also privileged to be supported and mentored by Prof. Dr. Thilo Stadelmann, Head of the CAI.
+Thus, I have learned to work scientifically on a daily basis, which has been highly beneficial for writing this thesis and will continue to help in my future endeavors.
+However, I still struggled writing this thesis:
+As someone with a background in industry and engineering background, I tend to approach tasks with a ``do-it'' mentality and intuitively refine my ideas with hands-on experimentation. 
+In this Master's thesis, it took me some time to make the transition from this do-it mindset to that of a researcher who is also strong in theoretical foundations. I believe that, thanks to this Master's thesis, I have now a good balance between implementation and studying theory.
+
+Overall, it has taken me an entire year to finish this thesis, which is the longest period of time allowed by my university.
+Formulating and refining this theory has been marked by failures and unsuccessful experiments.
+After approximately seven months of work, I had implemented two working and biologically inspired models, that performed quite well.
+In fact, I had even written a whole thesis on about these models, which, with some improvements, could have been submitted.
+But since these concepts didn't convince me enough that they should serve as foundation for a dissertation, I discarded everything and started all over again, just five months before the latest possible deadline.
+Consequently, this thesis contains only a fraction of the conducted experiments, but builds on the experience gained from earlier failed attempts.
+Nevertheless, I am convinced that this decision was the right one and that the quality and consistency of a thesis should outweigh the quantity.
+I hope that you, dear reader, agree with this perspective and can understand that not all experiments could be completed due to these circumstances.
+
+During my studies and work at the CAI, I am privileged to be supported and mentored by Prof. Dr. Thilo Stadelmann, Head of the CAI.
 He uses to say (also in accordance with his \href{https://stdm.github.io/Great-methodology-delivers-great-theses/}{blog-post}) ``Great methodology delivers great theses''.
 It is always desirable to have an excellent outcome in a thesis.
 However, it is equally or even more important to reason why and how something works, to justify choices, and to show limitations.
