--- a/zotero.bib
+++ b/zotero.bib
@@ -1,4 +1,402 @@
 
+@article{anderson_shifter_1987,
+	title = {Shifter circuits: a computational strategy for dynamic aspects of visual processing.},
+	volume = {84},
+	issn = {0027-8424, 1091-6490},
+	shorttitle = {Shifter circuits},
+	url = {https://pnas.org/doi/full/10.1073/pnas.84.17.6297},
+	doi = {10.1073/pnas.84.17.6297},
+	abstract = {We propose a general strategy for dynamic control of information flow between arrays of neurons at different levels of the visual pathway, starting in the lateral geniculate nucleus and the geniculorecipient layers of cortical area V1. This strategy can be used for resolving computational problems arising in the domains of stereopsis, directed visual attention, and the perception of moving images. In each of these situations, some means of dynamically controlling how retinal outputs map onto higher-level targets is desirable--in order to achieve binocular fusion, to allow shifts of the focus of attention, and to prevent blurring of moving images. The proposed solution involves what we term "shifter circuits," which allow for dynamic shifts in the relative alignment of input and output arrays without loss of local spatial relationships. The shifts are produced in increments along a succession of relay stages that are linked by diverging excitatory inputs. The direction of shift is controlled at each stage by inhibitory neurons that selectively suppress appropriate sets of ascending inputs. The shifter hypothesis is consistent with available anatomical and physiological evidence on the organization of the primate visual pathway, and it offers a sensible explanation for a variety of otherwise puzzling facts, such as the plethora of cells in the geniculorecipient layers of V1.},
+	language = {en},
+	number = {17},
+	urldate = {2023-07-14},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Anderson, C H and Van Essen, D C},
+	month = sep,
+	year = {1987},
+	pages = {6297--6301},
+}
+
+@misc{del_prete_mountain_1982,
+	title = {Mountain {Spirit} in {Winter}},
+	url = {https://im-possible.info/english/art/delprete/the-master-of-illusions/008.html},
+	urldate = {2023-07-14},
+	author = {del Prete, Sandro},
+	year = {1982},
+}
+
+@article{goodale_separate_1992,
+	title = {Separate visual pathways for perception and action},
+	volume = {15},
+	issn = {01662236},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/0166223692903448},
+	doi = {10.1016/0166-2236(92)90344-8},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-14},
+	journal = {Trends in Neurosciences},
+	author = {Goodale, Melvyn A. and Milner, A.David},
+	month = jan,
+	year = {1992},
+	pages = {20--25},
+}
+
+@misc{fasoli_human_2023,
+	title = {The human visual system},
+	url = {https://www.neuroinformatics.it/ai/},
+	language = {en},
+	urldate = {2023-07-14},
+	journal = {Artificial Intelligence},
+	author = {Fasoli, Diego},
+	year = {2023},
+}
+
+@article{feldman_neural_2013,
+	title = {The neural binding problem(s)},
+	volume = {7},
+	issn = {1871-4080, 1871-4099},
+	url = {http://link.springer.com/10.1007/s11571-012-9219-8},
+	doi = {10.1007/s11571-012-9219-8},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-14},
+	journal = {Cognitive Neurodynamics},
+	author = {Feldman, Jerome},
+	month = feb,
+	year = {2013},
+	pages = {1--11},
+}
+
+@article{revonsuo_binding_1999,
+	title = {Binding and {Consciousness}},
+	volume = {8},
+	issn = {10538100},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1053810099903938},
+	doi = {10.1006/ccog.1999.0393},
+	language = {en},
+	number = {2},
+	urldate = {2023-07-14},
+	journal = {Consciousness and Cognition},
+	author = {Revonsuo, Antti and Newman, James},
+	month = jun,
+	year = {1999},
+	pages = {123--127},
+}
+
+@article{akhtar_threat_2018,
+	title = {Threat of {Adversarial} {Attacks} on {Deep} {Learning} in {Computer} {Vision}: {A} {Survey}},
+	volume = {6},
+	issn = {2169-3536},
+	shorttitle = {Threat of {Adversarial} {Attacks} on {Deep} {Learning} in {Computer} {Vision}},
+	url = {https://ieeexplore.ieee.org/document/8294186/},
+	doi = {10.1109/ACCESS.2018.2807385},
+	urldate = {2023-07-14},
+	journal = {IEEE Access},
+	author = {Akhtar, Naveed and Mian, Ajmal},
+	year = {2018},
+	pages = {14410--14430},
+}
+
+@misc{hinton_how_2021,
+	title = {How to represent part-whole hierarchies in a neural network},
+	url = {http://arxiv.org/abs/2102.12627},
+	doi = {10.48550/arXiv.2102.12627},
+	abstract = {This paper does not describe a working system. Instead, it presents a single idea about representation which allows advances made by several different groups to be combined into an imaginary system called GLOM. The advances include transformers, neural fields, contrastive representation learning, distillation and capsules. GLOM answers the question: How can a neural network with a fixed architecture parse an image into a part-whole hierarchy which has a different structure for each image? The idea is simply to use islands of identical vectors to represent the nodes in the parse tree. If GLOM can be made to work, it should significantly improve the interpretability of the representations produced by transformer-like systems when applied to vision or language},
+	urldate = {2023-07-14},
+	publisher = {arXiv},
+	author = {Hinton, Geoffrey},
+	month = feb,
+	year = {2021},
+	note = {arXiv:2102.12627 [cs]},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, I.2.6, I.4.8},
+}
+
+@misc{mnih_playing_2013,
+	title = {Playing {Atari} with {Deep} {Reinforcement} {Learning}},
+	url = {http://arxiv.org/abs/1312.5602},
+	doi = {10.48550/arXiv.1312.5602},
+	abstract = {We present the first deep learning model to successfully learn control policies directly from high-dimensional sensory input using reinforcement learning. The model is a convolutional neural network, trained with a variant of Q-learning, whose input is raw pixels and whose output is a value function estimating future rewards. We apply our method to seven Atari 2600 games from the Arcade Learning Environment, with no adjustment of the architecture or learning algorithm. We find that it outperforms all previous approaches on six of the games and surpasses a human expert on three of them.},
+	urldate = {2023-07-14},
+	publisher = {arXiv},
+	author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan and Riedmiller, Martin},
+	month = dec,
+	year = {2013},
+	note = {arXiv:1312.5602 [cs]},
+	keywords = {Computer Science - Machine Learning},
+}
+
+@article{zhu_maplets_2004,
+	title = {Maplets for correspondence-based object recognition},
+	volume = {17},
+	issn = {08936080},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0893608004001509},
+	doi = {10.1016/j.neunet.2004.06.010},
+	language = {en},
+	number = {8-9},
+	urldate = {2023-07-13},
+	journal = {Neural Networks},
+	author = {Zhu, Junmei and von der Malsburg, Christoph},
+	month = oct,
+	year = {2004},
+	pages = {1311--1326},
+}
+
+@article{willshaw_how_1976,
+	title = {How patterned neural connections can be set up by self-organization},
+	volume = {194},
+	issn = {0080-4649, 2053-9193},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.1976.0087},
+	doi = {10.1098/rspb.1976.0087},
+	abstract = {An important problem in biology is to explain how patterned neural connections are set up during ontogenesis. Topographically ordered mappings, found widely in nervous systems, are those in which neighbouring elements in one sheet of cells project to neighbouring elements in a second sheet. Exploiting this neighbourhood property leads to a new theory for the establishment of topographical mappings, in which the distance between two cells is expressed in terms of their similarity with respect to certain physical properties assigned to them. This topographical code can be realized in a model employing either synchronization of nervous activity or exchange of specific molecules between neighbouring cells. By means of modifiable synapses the code is used to set up a topographical mapping between two sheets with the same internal structure. We have investigated the neural activity version. Without needing to make any elaborate assumptions about its structure or about the operations its elements are to carry out we have shown that the mappings are set up in a system-to-system rather than a cell-to-cell fashion. The pattern of connections develops in a step-by-step and orderly fashion, the orientation of the mappings being laid down in the earliest stages of development.},
+	language = {en},
+	number = {1117},
+	urldate = {2023-06-30},
+	journal = {Proceedings of the Royal Society of London. Series B. Biological Sciences},
+	author = {Willshaw, David J. and von der Malsburg, Christoph},
+	month = nov,
+	year = {1976},
+	pages = {431--445},
+}
+
+@article{wiskott_face_1997,
+	title = {Face recognition by elastic bunch graph matching},
+	volume = {19},
+	issn = {0162-8828, 2160-9292},
+	url = {http://ieeexplore.ieee.org/document/598235/},
+	doi = {10.1109/34.598235},
+	number = {7},
+	urldate = {2023-06-14},
+	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	author = {Wiskott, Laurenz and Fellous, Jean-Marc and Kuiger, Norbert and von der Malsburg, Christoph},
+	month = jul,
+	year = {1997},
+	pages = {775--779},
+}
+
+@article{wolfrum_recurrent_2008,
+	title = {A recurrent dynamic model for correspondence-based face recognition},
+	volume = {8},
+	issn = {1534-7362},
+	url = {http://jov.arvojournals.org/article.aspx?doi=10.1167/8.7.34},
+	doi = {10.1167/8.7.34},
+	language = {en},
+	number = {7},
+	urldate = {2023-07-03},
+	journal = {Journal of Vision},
+	author = {Wolfrum, Philipp and Wolff, Christian and Lücke, Jörg and von der Malsburg, Christoph},
+	month = dec,
+	year = {2008},
+	pages = {34},
+}
+
+@article{von_der_malsburg_neural_1987,
+	title = {A {Neural} {Network} for the {Retrieval} of {Superimposed} {Connection} {Patterns}},
+	volume = {3},
+	issn = {0295-5075, 1286-4854},
+	url = {https://iopscience.iop.org/article/10.1209/0295-5075/3/11/015},
+	doi = {10.1209/0295-5075/3/11/015},
+	number = {11},
+	urldate = {2023-06-30},
+	journal = {Europhysics Letters (EPL)},
+	author = {von der Malsburg, Christoph and Bienenstock, Elie L.},
+	month = jun,
+	year = {1987},
+	pages = {1243--1249},
+}
+
+@article{willshaw_marker_1979,
+	title = {A marker induction mechanism for the establishment of ordered neural mappings: its application to the retinotectal problem},
+	volume = {287},
+	issn = {0080-4622, 2054-0280},
+	shorttitle = {A marker induction mechanism for the establishment of ordered neural mappings},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rstb.1979.0056},
+	doi = {10.1098/rstb.1979.0056},
+	abstract = {This paper examines the idea that ordered patterns of nerve connections are set up by means of markers carried by the individual cells. The case of the ordered retinotectal projection in amphibia and fishes is discussed in great detail. It is suggested that retinotectal mappings are the result of two mechanisms acting in concert. One mechanism induces a set of retinal markers into the tectum. By this means, an initially haphazard pattern of synapses is transformed into a continuous or piece-wise continuous projection. The other mechanism places the individual pieces of the map in the correct orientation. The machinery necessary for this inductive scheme has been expressed in terms of a set of differential equations, which have been solved numerically for a number of cases. Straightforward assumptions are made as to how markers are distributed in the retina; how they are induced into the tectum; and how the induced markers bring about alterations in the pattern of synaptic contacts. A detailed physiological interpretation of the model is given. The inductive mechanism has been formulated at the level of the individual synaptic interactions. Therefore, it is possible to specify, in a given situation, not only the nature of the end state of the mapping but also how the mapping develops over time. The role of the modes of growth of retina and tectum in shaping the developing projection becomes clear. Since, on this model, the tectum is initially devoid of markers, there is an important difference between the development and the regeneration of ordered mappings. In the development of duplicate maps from various types of compound-eyes, it is suggested that the tectum, rather than the retina, contains an abnormal distribution of markers. An important parameter in these experiments, and also in the regeneration experiments where part-duplication has been found, is the range of interaction amongst the retinal cells. It is suggested that the results of many of the regeneration experiments (including apparently contradictory ones) are manifestations of a conflict between the two alternative ways of specifying the orientation of the map: through the information carried by the markers previously induced into the tectum and through the orientation mechanism itself.},
+	language = {en},
+	number = {1021},
+	urldate = {2023-06-30},
+	journal = {Philosophical Transactions of the Royal Society of London. B, Biological Sciences},
+	author = {Willshaw, David J. and von der Malsburg, Christoph},
+	month = nov,
+	year = {1979},
+	pages = {203--243},
+}
+
+@article{rosenblatt_perceptron_1958,
+	title = {The perceptron: {A} probabilistic model for information storage and organization in the brain.},
+	volume = {65},
+	issn = {1939-1471, 0033-295X},
+	shorttitle = {The perceptron},
+	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/h0042519},
+	doi = {10.1037/h0042519},
+	language = {en},
+	number = {6},
+	urldate = {2023-07-14},
+	journal = {Psychological Review},
+	author = {Rosenblatt, F.},
+	year = {1958},
+	pages = {386--408},
+}
+
+@article{mcculloch_logical_1943,
+	title = {A logical calculus of the ideas immanent in nervous activity},
+	volume = {5},
+	issn = {0007-4985, 1522-9602},
+	url = {http://link.springer.com/10.1007/BF02478259},
+	doi = {10.1007/BF02478259},
+	language = {en},
+	number = {4},
+	urldate = {2023-07-14},
+	journal = {The Bulletin of Mathematical Biophysics},
+	author = {McCulloch, Warren S. and Pitts, Walter},
+	month = dec,
+	year = {1943},
+	pages = {115--133},
+}
+
+@article{greig_molecular_2013,
+	title = {Molecular logic of neocortical projection neuron specification, development and diversity},
+	volume = {14},
+	issn = {1471-003X, 1471-0048},
+	url = {https://www.nature.com/articles/nrn3586},
+	doi = {10.1038/nrn3586},
+	language = {en},
+	number = {11},
+	urldate = {2023-07-13},
+	journal = {Nature Reviews Neuroscience},
+	author = {Greig, Luciano Custo and Woodworth, Mollie B. and Galazo, Maria J. and Padmanabhan, Hari and Macklis, Jeffrey D.},
+	month = nov,
+	year = {2013},
+	pages = {755--769},
+}
+
+@article{narr_relationships_2007,
+	title = {Relationships between {IQ} and {Regional} {Cortical} {Gray} {Matter} {Thickness} in {Healthy} {Adults}},
+	volume = {17},
+	issn = {1047-3211, 1460-2199},
+	url = {https://academic.oup.com/cercor/article-lookup/doi/10.1093/cercor/bhl125},
+	doi = {10.1093/cercor/bhl125},
+	language = {en},
+	number = {9},
+	urldate = {2023-07-13},
+	journal = {Cerebral Cortex},
+	author = {Narr, Katherine L. and Woods, Roger P. and Thompson, Paul M. and Szeszko, Philip and Robinson, Delbert and Dimtcheva, Teodora and Gurbani, Mala and Toga, Arthur W. and Bilder, Robert M.},
+	month = sep,
+	year = {2007},
+	pages = {2163--2171},
+}
+
+@inproceedings{oberlaender_beyond_2012,
+	title = {Beyond the {Cortical} {Column}: {Structural} {Organization} {Principles} in {Rat} {Vibrissal} {Cortex}},
+	booktitle = {5th {INCF} {Congress} of {Neuroinformatics} ({ICNF} 2012)},
+	publisher = {Frontiers Research Foundation},
+	author = {Oberlaender, Marcel and Narayanan, Rajeev T. and Egger, Robert and Meyer, Hanno and Baltruschat, Lothar and Dercksen, Vincent and Bruno, Randy and De Kock, Christiaan P. J. and Sakmann, Bert},
+	year = {2012},
+}
+
+@article{miconi_hebbian_2021,
+	title = {Hebbian learning with gradients: {Hebbian} convolutional neural networks with modern deep learning frameworks},
+	copyright = {Creative Commons Attribution 4.0 International},
+	shorttitle = {Hebbian learning with gradients},
+	url = {https://arxiv.org/abs/2107.01729},
+	doi = {10.48550/arXiv.2107.01729},
+	abstract = {Deep learning networks generally use non-biological learning methods. By contrast, networks based on more biologically plausible learning, such as Hebbian learning, show comparatively poor performance and difficulties of implementation. Here we show that Hebbian learning in hierarchical, convolutional neural networks can be implemented almost trivially with modern deep learning frameworks, by using specific losses whose gradients produce exactly the desired Hebbian updates. We provide expressions whose gradients exactly implement a plain Hebbian rule (dw {\textasciitilde}= xy), Grossberg's instar rule (dw {\textasciitilde}= y(x-w)), and Oja's rule (dw {\textasciitilde}= y(x-yw)). As an application, we build Hebbian convolutional multi-layer networks for object recognition. We observe that higher layers of such networks tend to learn large, simple features (Gabor-like filters and blobs), explaining the previously reported decrease in decoding performance over successive layers. To combat this tendency, we introduce interventions (denser activations with sparse plasticity, pruning of connections between layers) which result in sparser learned features, massively increase performance, and allow information to increase over successive layers. We hypothesize that more advanced techniques (dynamic stimuli, trace learning, feedback connections, etc.), together with the massive computational boost offered by modern deep learning frameworks, could greatly improve the performance and biological relevance of multi-layer Hebbian networks.},
+	urldate = {2023-07-11},
+	author = {Miconi, Thomas},
+	year = {2021},
+	note = {Publisher: arXiv
+Version Number: 2},
+	keywords = {FOS: Computer and information sciences, Neural and Evolutionary Computing (cs.NE)},
+}
+
+@misc{miconi_hebbian_2021-1,
+	title = {Hebbian learning with gradients: {Hebbian} convolutional neural networks with modern deep learning frameworks},
+	shorttitle = {Hebbian learning with gradients},
+	url = {http://arxiv.org/abs/2107.01729},
+	abstract = {Deep learning networks generally use non-biological learning methods. By contrast, networks based on more biologically plausible learning, such as Hebbian learning, show comparatively poor performance and difficulties of implementation. Here we show that Hebbian learning in hierarchical, convolutional neural networks can be implemented almost trivially with modern deep learning frameworks, by using specific losses whose gradients produce exactly the desired Hebbian updates. We provide expressions whose gradients exactly implement a plain Hebbian rule (dw {\textasciitilde}= xy), Grossberg's instar rule (dw {\textasciitilde}= y(x-w)), and Oja's rule (dw {\textasciitilde}= y(x-yw)). As an application, we build Hebbian convolutional multi-layer networks for object recognition. We observe that higher layers of such networks tend to learn large, simple features (Gabor-like filters and blobs), explaining the previously reported decrease in decoding performance over successive layers. To combat this tendency, we introduce interventions (denser activations with sparse plasticity, pruning of connections between layers) which result in sparser learned features, massively increase performance, and allow information to increase over successive layers. We hypothesize that more advanced techniques (dynamic stimuli, trace learning, feedback connections, etc.), together with the massive computational boost offered by modern deep learning frameworks, could greatly improve the performance and biological relevance of multi-layer Hebbian networks.},
+	urldate = {2023-07-11},
+	publisher = {arXiv},
+	author = {Miconi, Thomas},
+	month = nov,
+	year = {2021},
+	note = {arXiv:2107.01729 [cs]},
+	keywords = {Computer Science - Neural and Evolutionary Computing},
+}
+
+@inproceedings{van_den_oord_neural_2017,
+	title = {Neural {Discrete} {Representation} {Learning}},
+	volume = {30},
+	url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/7a98af17e63a0ac09ce2e96d03992fbc-Paper.pdf},
+	booktitle = {Advances in {Neural} {Information} {Processing} {Systems}},
+	publisher = {Curran Associates, Inc.},
+	author = {van den Oord, Aaron and Vinyals, Oriol and kavukcuoglu, koray},
+	editor = {Guyon, I. and Luxburg, U. Von and Bengio, S. and Wallach, H. and Fergus, R. and Vishwanathan, S. and Garnett, R.},
+	year = {2017},
+}
+
+@article{granlund_search_1978,
+	title = {In search of a general picture processing operator},
+	volume = {8},
+	issn = {0146664X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/0146664X78900473},
+	doi = {10.1016/0146-664X(78)90047-3},
+	language = {en},
+	number = {2},
+	urldate = {2023-07-11},
+	journal = {Computer Graphics and Image Processing},
+	author = {Granlund, Goesta H.},
+	month = oct,
+	year = {1978},
+	pages = {155--173},
+}
+
+@article{gabor_theory_1946,
+	title = {Theory of communication. {Part} 1: {The} analysis of information},
+	volume = {93},
+	issn = {2054-0604},
+	shorttitle = {Theory of communication. {Part} 1},
+	url = {https://digital-library.theiet.org/content/journals/10.1049/ji-3-2.1946.0074},
+	doi = {10.1049/ji-3-2.1946.0074},
+	language = {en},
+	number = {26},
+	urldate = {2023-07-11},
+	journal = {Journal of the Institution of Electrical Engineers - Part III: Radio and Communication Engineering},
+	author = {Gabor, D.},
+	month = nov,
+	year = {1946},
+	pages = {429--441},
+}
+
+@misc{hinton_improving_2012,
+	title = {Improving neural networks by preventing co-adaptation of feature detectors},
+	url = {http://arxiv.org/abs/1207.0580},
+	doi = {10.48550/arXiv.1207.0580},
+	abstract = {When a large feedforward neural network is trained on a small training set, it typically performs poorly on held-out test data. This "overfitting" is greatly reduced by randomly omitting half of the feature detectors on each training case. This prevents complex co-adaptations in which a feature detector is only helpful in the context of several other specific feature detectors. Instead, each neuron learns to detect a feature that is generally helpful for producing the correct answer given the combinatorially large variety of internal contexts in which it must operate. Random "dropout" gives big improvements on many benchmark tasks and sets new records for speech and object recognition.},
+	urldate = {2023-07-10},
+	publisher = {arXiv},
+	author = {Hinton, Geoffrey E. and Srivastava, Nitish and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan R.},
+	month = jul,
+	year = {2012},
+	note = {arXiv:1207.0580 [cs]},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
+}
+
+@article{gallie_experimental_1976,
+	title = {Experimental immunisation of six-month old calves against infection with the cysticercus stage of {Taenia} saginata},
+	volume = {8},
+	issn = {0049-4747},
+	abstract = {Three groups of calves aged 6 months were completely protected against oral challenge with Taenia saginata eggs following immunisation by three different methods. These were hyperimmunisation with six serial inoculations of a homogenate of T. saginata strobila in Freund's complete adjuvant, a single intramuscular inoculation with hatched T. saginata eggs or a single oral dose of unhatched T. saginata eggs. The calves immunised with tapeworm homogenate developed the strongest haemagglutinating and precipitating antibody response to the complex of antigens in an extract of tapeworm strobila, cysticercus tissue or cysticercus fluid. The orally infected calves developed a moderate antibody response to these antigens but the calves inoculated with hatched eggs showed only a very weak antibody response. The calves infected orally with eggs developed a peripheral eosinophilia but the other two methods of immunisation did not evoke this response. After challenge infection all groups showed an increase in peripheral eosinophil counts except the group immunised with tapeworm homogenate.},
+	language = {eng},
+	number = {4},
+	journal = {Tropical Animal Health and Production},
+	author = {Gallie, G. J. and Sewell, M. M.},
+	month = nov,
+	year = {1976},
+	pmid = {996937},
+	keywords = {Animals, Antibody Formation, Cattle, Cattle Diseases, Cysticercosis, Immunization, Leukocyte Count, Male, Taenia},
+	pages = {233--242},
+}
+
 @inproceedings{rhu_compressing_2018,
 	address = {Vienna},
 	title = {Compressing {DMA} {Engine}: {Leveraging} {Activation} {Sparsity} for {Training} {Deep} {Neural} {Networks}},
@@ -1329,22 +1727,6 @@
 	doi = {10.1016/B978-0-12-088566-4.X5000-4},
 }
 
-@article{wolfrum_recurrent_2008,
-	title = {A recurrent dynamic model for correspondence-based face recognition},
-	volume = {8},
-	issn = {1534-7362},
-	url = {http://jov.arvojournals.org/article.aspx?doi=10.1167/8.7.34},
-	doi = {10.1167/8.7.34},
-	language = {en},
-	number = {7},
-	urldate = {2023-07-03},
-	journal = {Journal of Vision},
-	author = {Wolfrum, Philipp and Wolff, Christian and Lücke, Jörg and Von Der Malsburg, Christoph},
-	month = dec,
-	year = {2008},
-	pages = {34},
-}
-
 @book{wiskott_face_1996,
 	title = {Face {Recognition} by {Dynamic} {Link} {Matching}},
 	publisher = {Ruhr-Univ., Inst. für Neuroinformatik},
@@ -2198,56 +2580,6 @@
 	month = dec,
 	year = {2018},
 	pages = {511--550},
-}
-
-@article{von_der_malsburg_neural_1987,
-	title = {A {Neural} {Network} for the {Retrieval} of {Superimposed} {Connection} {Patterns}},
-	volume = {3},
-	issn = {0295-5075, 1286-4854},
-	url = {https://iopscience.iop.org/article/10.1209/0295-5075/3/11/015},
-	doi = {10.1209/0295-5075/3/11/015},
-	number = {11},
-	urldate = {2023-06-30},
-	journal = {Europhysics Letters (EPL)},
-	author = {Von Der Malsburg, Christoph and Bienenstock, Elie L.},
-	month = jun,
-	year = {1987},
-	pages = {1243--1249},
-}
-
-@article{willshaw_how_1976,
-	title = {How patterned neural connections can be set up by self-organization},
-	volume = {194},
-	issn = {0080-4649, 2053-9193},
-	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.1976.0087},
-	doi = {10.1098/rspb.1976.0087},
-	abstract = {An important problem in biology is to explain how patterned neural connections are set up during ontogenesis. Topographically ordered mappings, found widely in nervous systems, are those in which neighbouring elements in one sheet of cells project to neighbouring elements in a second sheet. Exploiting this neighbourhood property leads to a new theory for the establishment of topographical mappings, in which the distance between two cells is expressed in terms of their similarity with respect to certain physical properties assigned to them. This topographical code can be realized in a model employing either synchronization of nervous activity or exchange of specific molecules between neighbouring cells. By means of modifiable synapses the code is used to set up a topographical mapping between two sheets with the same internal structure. We have investigated the neural activity version. Without needing to make any elaborate assumptions about its structure or about the operations its elements are to carry out we have shown that the mappings are set up in a system-to-system rather than a cell-to-cell fashion. The pattern of connections develops in a step-by-step and orderly fashion, the orientation of the mappings being laid down in the earliest stages of development.},
-	language = {en},
-	number = {1117},
-	urldate = {2023-06-30},
-	journal = {Proceedings of the Royal Society of London. Series B. Biological Sciences},
-	author = {Willshaw, David J. and Von Der Malsburg, Christoph},
-	month = nov,
-	year = {1976},
-	pages = {431--445},
-}
-
-@article{willshaw_marker_1979,
-	title = {A marker induction mechanism for the establishment of ordered neural mappings: its application to the retinotectal problem},
-	volume = {287},
-	issn = {0080-4622, 2054-0280},
-	shorttitle = {A marker induction mechanism for the establishment of ordered neural mappings},
-	url = {https://royalsocietypublishing.org/doi/10.1098/rstb.1979.0056},
-	doi = {10.1098/rstb.1979.0056},
-	abstract = {This paper examines the idea that ordered patterns of nerve connections are set up by means of markers carried by the individual cells. The case of the ordered retinotectal projection in amphibia and fishes is discussed in great detail. It is suggested that retinotectal mappings are the result of two mechanisms acting in concert. One mechanism induces a set of retinal markers into the tectum. By this means, an initially haphazard pattern of synapses is transformed into a continuous or piece-wise continuous projection. The other mechanism places the individual pieces of the map in the correct orientation. The machinery necessary for this inductive scheme has been expressed in terms of a set of differential equations, which have been solved numerically for a number of cases. Straightforward assumptions are made as to how markers are distributed in the retina; how they are induced into the tectum; and how the induced markers bring about alterations in the pattern of synaptic contacts. A detailed physiological interpretation of the model is given. The inductive mechanism has been formulated at the level of the individual synaptic interactions. Therefore, it is possible to specify, in a given situation, not only the nature of the end state of the mapping but also how the mapping develops over time. The role of the modes of growth of retina and tectum in shaping the developing projection becomes clear. Since, on this model, the tectum is initially devoid of markers, there is an important difference between the development and the regeneration of ordered mappings. In the development of duplicate maps from various types of compound-eyes, it is suggested that the tectum, rather than the retina, contains an abnormal distribution of markers. An important parameter in these experiments, and also in the regeneration experiments where part-duplication has been found, is the range of interaction amongst the retinal cells. It is suggested that the results of many of the regeneration experiments (including apparently contradictory ones) are manifestations of a conflict between the two alternative ways of specifying the orientation of the map: through the information carried by the markers previously induced into the tectum and through the orientation mechanism itself.},
-	language = {en},
-	number = {1021},
-	urldate = {2023-06-30},
-	journal = {Philosophical Transactions of the Royal Society of London. B, Biological Sciences},
-	author = {Willshaw, David J. and Von Der Malsburg, Christoph},
-	month = nov,
-	year = {1979},
-	pages = {203--243},
 }
 
 @article{mcpherson_physical_2001,
@@ -3898,7 +4230,7 @@
 	year = {1873},
 }
 
-@article{hopfield_neural_1982,
+@article{hopfield_neural_1982-1,
 	title = {Neural networks and physical systems with emergent collective computational abilities.},
 	volume = {79},
 	issn = {0027-8424, 1091-6490},
@@ -3952,21 +4284,6 @@
 
 @misc{noauthor_improving_nodate,
 	title = {Improving language understanding by generative pre-training},
-}
-
-@article{wiskott_face_1997,
-	title = {Face recognition by elastic bunch graph matching},
-	volume = {19},
-	issn = {0162-8828, 2160-9292},
-	url = {http://ieeexplore.ieee.org/document/598235/},
-	doi = {10.1109/34.598235},
-	number = {7},
-	urldate = {2023-06-14},
-	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-	author = {Wiskott, Laurenz and Fellous, Jean-Marc and Kuiger, Norbert and Von Der Malsburg, Christoph},
-	month = jul,
-	year = {1997},
-	pages = {775--779},
 }
 
 @book{ivakhnenko_cybernetic_1965,
