--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -7,9 +7,9 @@ A possible implementation of this theory is by using self-organising projection 
 Arguably, the only existing systems that, in non-experts' eyes, behave intelligently\sidenote{Which does not mean that such systems exhibit actual intelligence.} are foundation models such as large language models (LLMs) \cite{brown_language_2020, touvron_llama_2023}, and their fine-tuned versions \cite{ouyang_training_2022}. However, like other deep learning models, also foundation models suffer from the typical drawbacks of statistical learning (c.f. \secref{limitationsDL}). Therefore, a lot of research has been conducted to reduce these well-known problems: For example, current research aims to reduce hallucinations \cite{feldman_trapping_2023, manakul_selfcheckgpt_2023}, to implement an ongoing learning framework \cite{sahoo_online_2018, hoi_online_2021}, to transfer knowledge between tasks and data domains \cite{zhuang_comprehensive_2021, sager_unsupervised_2022}, or to learn what should be learned \cite{thrun_learning_1998, hospedales_meta-learning_2021}. However, the underlying framework remains identical: Data is statistically mapped to manually or automatically generated labels, making it difficult to solve problems such as lack of robustness,  out-of-distribution generalisation, data efficiency, causal understanding or common sense reasoning (c.f. \secref{limitationsDL}). In the following, alternative approaches to training deep networks are presented that attempt to alleviate these problems with new principles that do not rely solely on label prediction or data reconstruction. 
 
 \paragraph{1000 Brains.} Jeff Hawking and his research group use the brain as the single source of inspiration and build, following their interpretation, a biologically highly plausible system that implements the brain's learning algorithm \sidecite{hawkins_framework_2019}. The learning algorithm is an adapted version of unsupervised Hebbian learning (c.f. \secref{hebbian}). Their theory is based on Vernon Mountcastle's proposal that the neocortex comprises many cortical columns, all having a similar architecture and performing similar functions \sidecite{mountcastle_organizing_1978, mountcastle_columnar_1997}. Thus, they argue that the brain does not comprise a single learning model like current deep learning systems but many similar but independent models for each object \sidecite{lewis_locations_2019}. Each model uses different inputs from different sensory system parts. These models make predictions based on the input they receive and vote to reach a consensus on the sensory observations.
-This theory is also known as the 1000 brains theory, as many models work in parallel. The principle of many parallel models is closely related to ensemble approaches in deep learning \sidecite{yang_survey_2023}, with the constraint, similar to random forest \sidecite{tin_kam_ho_random_1995}, that only a portion of the data is available to each model. Current results are difficult to interpret as the proposed model has been trained and tested on the same dataset. In its current form, the model can recognise several hundred objects and is robust to noise. However, the number of input signals severely limits the network's capacity. By adding more cortical columns (expanding the capacity in hidden layers), the model cannot scale to recognise more objects. 
+This theory is also known as the 1000 brains theory, as many models work in parallel. The principle of many parallel models is closely related to ensemble approaches in deep learning \sidecite{yang_survey_2023}, with the constraint, similar to random forest \sidecite{ho_random_1995}, that only a portion of the data is available to each model. Current results are difficult to interpret as the proposed model has been trained and tested on the same dataset. In its current form, the model can recognise several hundred objects and is robust to noise. However, the number of input signals severely limits the network's capacity. By adding more cortical columns (expanding the capacity in hidden layers), the model cannot scale to recognise more objects. 
 
-Strictly enforcing biological plausibility limits performance significantly, as the biologically inspired algorithm cannot fully exploit the mathematical capabilities of computational hardware. Intuitively, however, several proposed principles appear promising: \emph{Sparse coding} encourages compact and efficient representation of complex data \sidecite{ferrier_toward_2014}, \emph{self-organisation} of a large number of parallel models increases robustness \cite{Yang_Lv_Chen_2023}, and \emph{predicting future cell activation} allows learning in an unsupervised manner and does not restrict the model to specific predefined tasks.
+Strictly enforcing biological plausibility limits performance significantly, as the biologically inspired algorithm cannot fully exploit the mathematical capabilities of computational hardware. Intuitively, however, several proposed principles appear promising: \emph{Sparse coding} encourages compact and efficient representation of complex data \sidecite{ferrier_toward_2014}, \emph{self-organisation} of a large number of parallel models increases robustness \cite{yang_survey_2023}, and \emph{predicting future cell activation} allows learning in an unsupervised manner and does not restrict the model to specific predefined tasks.
 
 \paragraph{Recursive Cortical Network.} A second type of network that has evolved from the 1000 brains theory is called the recursive cortical network (RCN) \sidecite{george_generative_2017}\sidenote{The driving force behind it, Dileep George, worked in Jeff Hawkings' group and was instrumental in developing the fundamentals of the 1000 brains theory.}. It is based on the insight that human vision processes shape and appearance differently and that a familiar object with an unexpected colour can still be easily recognised.
 The RCN uses separate mechanisms to process contours and appearances and uses lateral connections for contour consistency.
@@ -24,7 +24,7 @@ Furthermore, it can deal with highly overlapping objects and explain that one ob
 
 Some concepts of CapsNets are closely related to those of the 100 brains theory and RCNs. However, CapsNets have their origins in computer science and are oriented towards deep learning principles. In contrast, the other frameworks have their origins in neuroscience and focus on biological plausibility. CapsNets divide the features into capsules which is helpful for good generalisation. In combination with dynamic routing, capsules allow the model to generalise to new, unseen viewpoints, have a high robustness to affine transformations, and can segment overlapping images. However, a severe problem is the accumulation of spatial information, which prevents the model from scaling to larger datasets. This could be due to the fact that the model processes independent images sequentially. This problem might be alleviated if the model is adapted to either process sequentially related images or videos or if the model can interact with objects to obtain better spatial information.
 
-\paragraph{Parsimony and Self-Consistency.} \sideciteay{ma_principles_2022} suggest that appropriate data structuring can lead to the emergence of intelligence, especially if the data is structured according to the principles of parsimony and self-consistency. The two principles describe \emph{what} and \emph{how} should be learned. Parsimony implies that an intelligent learning system should recognise low-dimensional structures in observed high-dimensional data and organise them in the most compact and structured way\sidenote(The goal is not to achieve the best possible compression but to obtain compact and structured representations in a computationally efficient way.). The second principle of self-consistency states that an intelligent learning system minimises the \emph{internal} discrepancy between observed and regenerated observations. Such internal representations can be learned through self-criticism \sidecite{rennie_self-critical_2017}, where the internal representations are consistent and satisfy the principle of parsimony. The described framework is very promising as it incorporates biological concepts into a framework that unifies and clarifies many practices and empirical findings of deep learning.
+\paragraph{Parsimony and Self-Consistency.} \sideciteay{ma_principles_2022} suggest that appropriate data structuring can lead to the emergence of intelligence, especially if the data is structured according to the principles of parsimony and self-consistency. The two principles describe \emph{what} and \emph{how} should be learned. Parsimony implies that an intelligent learning system should recognise low-dimensional structures in observed high-dimensional data and organise them in the most compact and structured way\sidenote{The goal is not to achieve the best possible compression but to obtain compact and structured representations in a computationally efficient way.}. The second principle of self-consistency states that an intelligent learning system minimises the \emph{internal} discrepancy between observed and regenerated observations. Such internal representations can be learned through self-criticism \sidecite{rennie_self-critical_2017}, where the internal representations are consistent and satisfy the principle of parsimony. The described framework is very promising as it incorporates biological concepts into a framework that unifies and clarifies many practices and empirical findings of deep learning.
 Unfortunately, the authors do not present any metrics, so estimating the framework's performance is difficult.
 The challenge of this framework seems to be improving the modelling of the parsimony principle, i.e. improving the constraints responsible for forming the latent space and scaling it to larger datasets.
 
@@ -123,7 +123,7 @@ On the other hand, a CNN has the advantage that it is extremely fast and flexibl
 Self-organisation is the process by which systems consisting of many units spontaneously acquire their structure or function without interference from an external agent or system \sidecite{morris_cognitive_2006}.
 They organise their global behaviour through local interactions amongst themselves.
 The absence of a central control unit allows self-organising systems to adjust to new environmental conditions quickly.
-Additionally, such systems have built-in redundancy with a high degree of robustness as they consist of many simpler individual units \sidecite{wagner_19_2013}.
+Additionally, such systems have built-in redundancy with a high degree of robustness as they consist of many simpler individual units \sidecite{wagner_robustness_2013}.
 These individual units can even fail without the overall system breaking down.
 
 \paragraph{Grow Patterns.} Cellular automata contain a grid of similar cells\sidenote{An image or features of images can be interpreted as a 2D grid of cells.} with an internal state updated periodically.
@@ -159,7 +159,7 @@ By using self-organisation and Hebbian learning, they show that it is possible t
 However, it works only for small-scale problems as it can quickly get stuck in local optima.
 
 Self-organisation can even be used to control reinforcement learning (RL) agents.
-\sideciteay{variengien_towards_2021} use the observations of the environment as cell states of an NCA. The following states predicted by the NCA are used as Q-value estimates of a deep Q-learning algorithm \sidecite{Mnih_Kavukcuoglu_Silver_Graves_Antonoglou_Wierstra_Riedmiller_2013}. This allows training RL agents with local self-organisation instead of backpropagation of error.
+\sideciteay{variengien_towards_2021} use the observations of the environment as cell states of an NCA. The following states predicted by the NCA are used as Q-value estimates of a deep Q-learning algorithm \sidecite{mnih_playing_2013}. This allows training RL agents with local self-organisation instead of backpropagation of error.
 
 
 \paragraph{Network Architectures}
@@ -178,7 +178,7 @@ or be grown from a single cell \sidecite{raghavan_neural_2019} by adding additio
 
 
 \paragraph{Relevance}
-According to \sideciteay{von_der_Malsburg_Stadelmann_Grewe_2022}, self-organisation is the fundamental principle for natural intelligence (c.f. \secref{natural_intelligence}).
+According to \sideciteay{von_der_malsburg_theory_2022}, self-organisation is the fundamental principle for natural intelligence (c.f. \secref{natural_intelligence}).
 As summarized in this section, self-organisation can be used for making local decisions (generating or classifying images), learning network parameters, and organizing neural network structures.
 However, self-organisation is often inferior to systems trained with end-to-end backpropagation of error.
 \sideciteay{risi_future_2021} describes why self-organising systems are hard to train;
@@ -233,7 +233,7 @@ Each layer has its objective function that aims to have a high ``goodness'' for 
 The sum of the squared neural activities measures the goodness. Thus, having many (strongly) active neurons means having high goodness and should only be the case for positive data (image and label match). The neuronal activity should be low for negative data, i.e. when the image and label do not match.
 During inference, the data is fed with each label through the network, and the one with the highest goodness is kept as the prediction.
 
-The same input is fed into the model over multiple timesteps to obtain hierarchical features \sidecite{Hinton_2021}.
+The same input is fed into the model over multiple timesteps to obtain hierarchical features \sidecite{hinton_how_2021}.
 The trick is to feed the input into the network from one side and the label into the network from the other side. A layer receives as input the activity vector of the previous layer and the activity vector of the subsequent layer at the previous timestep. By enforcing high goodness when the input and label match, information must flow in both directions. Thus, hierarchical features can be learned without a backward pass.
 
 The FF algorithm did not yet scale to large datasets. Furthermore, inference is very slow for datasets with many labels, as each sample is compared with all existing labels. However, a promising approach is to input specific information (e.g. images) into one end of the network, and general information (e.g. labels) into the other end and effectively merge these inputs to extract hierarchical features.
@@ -244,7 +244,7 @@ In the context of target propagation, each layer is considered an encoder that m
 During a forward pass, an input vector $\boldsymbol{x}$ is fed through all encoders to obtain a prediction $\boldsymbol{\hat{y}}$. For the backward pass, the target value $\boldsymbol{y}$ is fed through all decodes to obtain a target per layer\sidenote{If each layer would predict this target, the output would be $\boldsymbol{y}$.}.
 
 
-An advantage of calculating targets is that only layer-wise gradients are required, which allows models to have non-differentiable operations \cite{Lee_Zhang_Fischer_Bengio_2015}.
+An advantage of calculating targets is that only layer-wise gradients are required, which allows models to have non-differentiable operations \cite{appice_difference_2015}.
 A significant drawback is that auxiliary decoders must be trained to approximate the hidden targets, which might outweigh the savings achieved by eliminating a complete backward pass.
 Furthermore, this approach does not scale well in praxis as the decoder cannot perfectly calculate the inverse of the layers' mapping function. 
 Thus, the learning process is rather unstable as the target is approximated per layer and might steer the learning process in the wrong direction.
@@ -275,7 +275,7 @@ Feedback alignment algorithms are a more biologically plausible alternative to b
 When combined with  application-specific integrated circuits, they can reduce training time and energy costs \cite{lillicrap_random_2016}.
 However, they cannot yet scale to large datasets, and further research is required towards this direction.
 
-\paragraph{Auxiliary Variables.} Lastly, another group of learning algorithms use \emph{auxiliary variables} \sidecite{carreira-perpinan_distributed_2014, taylor_training_2016, zhang_convergent_2017, lau_proximal_2018.
+\paragraph{Auxiliary Variables.} Lastly, another group of learning algorithms use \emph{auxiliary variables} \sidecite{carreira-perpinan_distributed_2014, taylor_training_2016, zhang_convergent_2017, lau_proximal_2018}.
 These methods use the idea of variable splitting, i.e. transforming a complicated problem into a simpler one by introducing additional trainable variables.
 Introducing auxiliary variables may pose scalability issues, and these methods require special, usually tailor-made solvers.
 Therefore, such methods usually scale to specific use cases only.
